dnl configure.ac
dnl
dnl Copyright 2007, 2008, 2011 by Heiko Oberdiek.
dnl
dnl The file is part of project mkjobtexmf.
dnl It's free software; you may redistribute it and/or
dnl modify it under the same terms as Perl itself
dnl (Perl Artistic License/GNU General Public License, version 2).
dnl
AC_INIT(mkjobtexmf, 0.8, heiko.oberdiek@googlemail.com)

AC_CONFIG_FILES(Makefile)

AC_PROG_INSTALL

AC_OUTPUT
